backend url added

--- a/Frontend/reservation-history.html
+++ b/Frontend/reservation-history.html
@@ -15,7 +15,7 @@
   <main>
     <div id="reservationHistory" class="reservation-list"></div>
   </main>
-
+  <script src="js/config.js"></script>
   <script src="js/reservation-history.js"></script>
 </body>
 </html>
