--- a/Frontend/reservations.html
+++ b/Frontend/reservations.html
@@ -14,6 +14,7 @@
     <a href="restaurant-list.html" class="back-btn">Back to Restaurants</a>
   </div>
 
+  <script src="js/config.js"></script>
   <script src="js/load-navbar.js"></script>
   <script src="js/reservations.js"></script>
 </body>
