--- a/Frontend/restaurant-list.html
+++ b/Frontend/restaurant-list.html
@@ -23,6 +23,7 @@
     </div>
   </div>
 
+  <script src="js/config.js"></script>
   <script src="js/load-navbar.js"></script>
   <script src="js/restaurant-list.js"></script>
   <script src="js/booking.js"></script>
