some changes in files

--- a/Frontend/confirmation.html
+++ b/Frontend/confirmation.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="confirmation-container">
-    <h2>🎉 Reservation Confirmed!</h2>
+    <h2>Reservation Confirmed!</h2>
     <p id="confirmation-details"></p>
     <a href="restaurant-list.html" class="back-link">Back to Restaurants</a>
   </div>
